--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -62,6 +62,11 @@ jobs:
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
           generator_config_file: next.config.mjs
+      - run: npm ci
+      - run: npm run build
+        env: 
+          SERVICEDOMAIN: ${{ secrets.SERVICEDOMAIN }}
+          APIKEY: ${{ secrets.APIKEY }}
       - name: Restore cache
         uses: actions/cache@v4
         with:
