--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -62,6 +62,11 @@ jobs:
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
           generator_config_file: next.config.mjs
+      - run: npm ci
+      - run: npm run build
+        env: 
+          SERVICEDOMAIN: ${{ secrets.SERVICEDOMAIN }}
+          APIKEY: ${{ secrets.APIKEY }}
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -76,6 +81,8 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        env:
+          GITHUB_PAGES: true
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
