--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/env": "^15.0.1",
+    "dayjs": "^1.11.13",
     "microcms-js-sdk": "^3.1.2",
     "next": "14.2.15",
     "react": "^18",
