--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@next/env": "^15.0.1",
+    "cheerio": "^1.0.0",
     "dayjs": "^1.11.13",
+    "highlight.js": "^11.10.0",
+    "html-react-parser": "^5.1.18",
     "microcms-js-sdk": "^3.1.2",
     "next": "14.2.15",
     "react": "^18",
